--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "bcrypt": "^1.0.3",
+    "bootstrap": "^4.0.0-beta",
     "meteor-node-stubs": "~0.2.4",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "popper.js": "^1.12.5",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-router": "^3.0.5"
   }
 }
